--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,12 +2,12 @@ node {
 
    stage('SCM') {
       // git clone
-	  git 'https://github.com/GitPracticeRepo/spring-petclinic.git'
+	  git 'https://github.com/vinodmaddela/spring-petclinic.git'
    }
    
    stage ('build the packages') {
       // mvn package
-	  sh 'mvn package'
+	  sh 'mvn clean package'
    }
 
    
